# proxy-config

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: script.sh
examples/: get_mac_proxies.rs  get_proxies.rs
src/: env.rs  errors.rs  lib.rs  macos.rs  sysconfig_proxy.rs  util.rs  windows.rs
src/test_data/: preferences.plist
