[package]
name = "proxy_config"
version = "0.0.2"
authors = ["mattico8@gmail.com"]
categories = ["network-programming", "os"]
description = "A library to get proxy configuration from the OS."
keywords = ["proxy"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mattico/proxy-config"
documentation = "https://docs.rs/proxy_config"

[badges]
appveyor = { repository = "mattico/proxy-config" }
travis-ci = { repository = "mattico/proxy-config" }

[dependencies]
url = "1.5"

[dev-dependencies]
tempfile = "2.1.6"

[features]
default = ["env", "sysconfig_proxy"]
env = []
sysconfig_proxy = []

[target."cfg(windows)".dependencies]
winreg = "0.4"
