[package]
name = "proxy_cfg"
version = "0.1.0"
authors = ["mattico8@gmail.com"]
categories = ["network-programming", "os"]
description = "A library to get proxy configuration from the OS."
keywords = ["proxy"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/devolutions/proxy-cfg"
documentation = "https://docs.rs/proxy_cfg"

[badges]
appveyor = { repository = "devolutions/proxy-cfg" }
travis-ci = { repository = "devolutions/proxy-cfg" }

[dependencies]
url = "1.5"

[dev-dependencies]
tempfile = "2.1.6"

[features]
default = ["env", "sysconfig_proxy"]
env = []
sysconfig_proxy = []

[target."cfg(windows)".dependencies]
winreg = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "0.3.0"
serde_json = "1.0.33"