[package]
name = "proxy_cfg"
version = "0.3.0"
edition = "2018"
authors = ["mattico8@gmail.com", "rmarkiewicz@devolutions.net" ]
categories = ["network-programming", "os"]
description = "A library to get proxy configuration from the OS."
keywords = ["proxy"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/devolutions/proxy-cfg"
documentation = "https://docs.rs/proxy_cfg"

[badges]
appveyor = { repository = "devolutions/proxy-cfg" }
travis-ci = { repository = "devolutions/proxy-cfg" }

[dependencies]
url = "2"

[dev-dependencies]
tempfile = "2.1.6"

[features]
default = ["env", "sysconfig_proxy"]
env = []
sysconfig_proxy = []

[target."cfg(windows)".dependencies]
winapi = {version = "0.3.5", features = ["winnt", "winhttp"]}
winreg = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6.0"
system-configuration-sys = "0.3.0"